EndlessAdapter: List.of instead of ArrayList